--- a/css/style.less
+++ b/css/style.less
@@ -73,6 +73,10 @@ body{
         img{
           width: 1rem;
         }
+        .c-active{
+          box-shadow: 1px 1px 10px 2px #fff;
+          border-radius: 50%;
+        }
       }
     }
     .c-jetton-add{
@@ -210,6 +214,11 @@ body{
             //background: #eec367;
             img{
               width: 1rem;
+              height: 1rem;
+            }
+            .c-active{
+              box-shadow: 1px 1px 10px 2px #fff;
+              border-radius: 50%;
             }
           }
         }
