--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,10 @@ body {
 .c-modal-fixed-container .c-modal-box .c-jetton-item-box .c-jetton-item img {
   width: 1rem;
 }
+.c-modal-fixed-container .c-modal-box .c-jetton-item-box .c-jetton-item .c-active {
+  box-shadow: 1px 1px 10px 2px #fff;
+  border-radius: 50%;
+}
 .c-modal-fixed-container .c-modal-box .c-jetton-add {
   width: 100%;
   height: 2rem;
@@ -279,6 +283,11 @@ body {
 }
 .c-container .c-bottom-container .c-game-container .c-menu-jetton-box .c-jetton-box .c-jetton-item img {
   width: 1rem;
+  height: 1rem;
+}
+.c-container .c-bottom-container .c-game-container .c-menu-jetton-box .c-jetton-box .c-jetton-item .c-active {
+  box-shadow: 1px 1px 10px 2px #fff;
+  border-radius: 50%;
 }
 .c-container .c-bottom-container .c-game-container .c-game-main-box {
   display: -webkit-box;
