--- a/css/style.less
+++ b/css/style.less
@@ -384,6 +384,7 @@ body{
             display: flex;
             flex-wrap: wrap;
             .c-stake-item{
+              position: relative;
               display: flex;
               width: 2.4rem;
               height: 0.8rem;
